kubernetes/apps/hydra/manga-scraper/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: manga-scraper
spec:
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
