kubernetes/apps/hydra/manga-scraper/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: manga-scraper
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
