kubernetes/apps/hydra/manga-scraper/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: manga-scraper
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 3000
