kubernetes/apps/hydra/manga-scraper/service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: manga-scraper
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
